# AlchemyCommission

./: .gitignore  flake.nix
BioIDFaceDB/: app_utils.py  camera_app.py  const.py  dataset.py  download.py  examplePic_app.py  gen_data.py  group_data.py  model.py  test.py  testset_app.py  train.py
MNIST/pytorch/: const.py  model.py  test.py  train.py
MNIST/rust/: Cargo.toml
MNIST/rust/src/: main.rs  model.rs  parser.rs  test.rs  train.rs  types.rs
